--- a/templates/blog.html
+++ b/templates/blog.html
@@ -41,7 +41,7 @@
                     <img src="{{ MEDIA_URL }}{{ blog.Blog_Image }}" alt="" class="img-fluid">
                   </div>
 
-                  <p class="post-category">Politics</p>
+                  <p class="post-category">{{ blog.Blog_post_category }}</p>
 
                   <h2 class="title">
                     <a href="/blog/{{ blog.Blog_Slug }}">{{ blog.Blog_Title }}</a>
